--- a/internals/generators/component/index.tsx.hbs
+++ b/internals/generators/component/index.tsx.hbs
@@ -6,7 +6,7 @@
 {{#if wantMemo}}
 import React, { memo } from 'react';
 {{else}}
-import * as React from 'react';
+import React from 'react';
 {{/if}}
 {{#if wantStyledComponents}}
 import styled from 'styled-components/macro';
